--- a/modules/ROOT/pages/deployment/docker/docker-setup.adoc
+++ b/modules/ROOT/pages/deployment/docker/docker-setup.adoc
@@ -20,6 +20,7 @@
 :kubernetes-url: https://kubernetes.io
 :swarm-v-kub-1-url: https://circleci.com/blog/docker-swarm-vs-kubernetes/#c-consent-modal
 :swarm-v-kub-2-url: https://vexxhost.com/blog/kubernetes-vs-docker-swarm-containerization-platforms/
+:helm-charts-ocis-url: https://github.com/owncloud/ocis-charts
 
 :description: Docker images for oCIS are available on {docker-ocis-url}[Docker Hub]. You can easily download and start an image with only a few commands. 
 
@@ -59,7 +60,9 @@ which docker-compose
 +
 Alternatively, install Docker depending on your OS from the Docker site. See {install-docker-server-url}[Install Docker Engine] and {install-d-compose-url}[Install Docker Compose] for details.
 
-* When using Windows or macOS, you have to install {docker-desktop-url}[Docker Desktop] which includes the Docker Engine, the Docker CLI client, Docker Compose, {docker-dashboard-url}[Docker Dashboard] and other tools.
+* When using macOS, you have to install {docker-desktop-url}[Docker Desktop] which includes the Docker Engine, the Docker CLI client, Docker Compose, {docker-dashboard-url}[Docker Dashboard] and other tools.
+
+* For Windows, oCIS Docker images are not available, but might be in the future.
 
 == Image Management
 
@@ -67,7 +70,7 @@ Alternatively, install Docker depending on your OS from the Docker site. See {in
 
 // fixme: things are gonna change: after a call with mbarz and cdegen it turns out that latest is not a good idea to use as latest will always point to the master (!) but not to a stable version. atm to use a stable version you would need to use a tag! most likely a "stable" tag will be introduced pointing to the latest stable release and latest will point to the latest master release. this will also be anncounced/described on dockerhub. this means that we have to review the commands below regarding installation, version and upgrade.
 
-To give some terminology guidance, images are unchangeable snapshots of live containers while containers are running (or stopped) instances of an image.
+To give some terminology guidance, images are unchangeable snapshots of live containers, while containers are running (or stopped) instances of an image.
 
 * To download the latest oCIS image, run the following command:
 +
@@ -91,7 +94,7 @@ REPOSITORY      TAG       IMAGE ID       CREATED       SIZE
 owncloud/ocis   latest    fc4151802141   9 hours ago   98.3MB
 ----
 
-* Check you oCIS version with the following command. Note that you need to have `jq` installed:
+* Check your oCIS version with the following command. Note that you need to have `jq` installed:
 +
 [source,bash]
 ----
@@ -108,12 +111,14 @@ latest
 
 === Update an Image
 
-First check the current version of the image used with the command above and compare it with the versions available on {docker-ocis-url}[Docker Hub]. When a new image is available use these are the steps to upgrade the image, for detailed commands see the corresponding sections:
+First check the current version of the image used with the command above and compare it with the versions available on {docker-ocis-url}[Docker Hub]. When a new image is available use these steps to upgrade the image:
 
 * xref:stop-a-running-container[Stop] the running oCIS container
 * xref:remove-an-ocis-image[Remove] the actual image
 * xref:download-the-ocis-image[Download] the desired new image
 * xref:start-the-ocis-runtime[Start] the oCIS runtime
+
+For detailed commands see the corresponding sections.
 
 === Remove an oCIS Image
 
@@ -161,12 +166,12 @@ sudo docker run \
 
 You may also see xref:deployment/general/general-info.adoc#define-the-ocis-data-path[Define the oCIS Data Path] for another important basic environment variable.
 
-WARNING: While this is not used in production and for testing purposes only, you could run more than one oCIS container concurrenty. In such a case you have to define different ports and data paths for each of the containers you run to avoid any unexpected behaviour.
+WARNING: While this is not used in production but for testing purposes only, you could run more than one oCIS container concurrently. In such a case, you have to define different ports and data paths for each of the containers you run to avoid any unexpected behaviour.
 
 The following {docker-cli-url}[Docker command-line options] are quite helpful to know:
 
 -e: Set environment variables::
-Use this to hand over only a few environment variables to the run command.
+Use this to pass only a few environment variables to the run command.
 
 -i: Keep STDIN open even if not attached::
 This keeps STDIN open to the container.
@@ -175,7 +180,7 @@ This keeps STDIN open to the container.
 Allocate a virtual terminal session within the container.
 
 -p: Publish a container's port(s) to the host::
-Defines the port mapping `<hostPort>:<containerPort>`. Use the port mapping which is necessary if you want to access the dockerized oCIS web user interface.
+Defines the port mapping `<hostPort>:<containerPort>`. Use the port mapping if you want to access the dockerized oCIS web user interface.
 
 --rm: Automatically remove the container when it exits::
 Tell the Docker daemon to clean up the container and remove the file system after the container exits.
@@ -200,7 +205,7 @@ docker exec -it <container-id> sh
 
 You can now use commands like `ocis --help` or others to  xref:deployment/general/general-info.adoc#managing-extensions[manage your runtime extensions].
 
-To exit the containers shell, either type kbd:[exit] or kbd:[CTRL+D].
+To exit the container's shell, either type kbd:[exit] or kbd:[CTRL+D].
 
 // fixme: after a call with @cdegen, it is currently not clear how to restart a runtime extension properly as the extension needs an extension yaml file (see --config-file) and the question is - where is the location of this file - it cant be inside the container!
 
@@ -208,14 +213,14 @@ To exit the containers shell, either type kbd:[exit] or kbd:[CTRL+D].
 
 === Start the Container Detached
 
-Note that the _docker run_ command will bind the container to the shell you are running. If you want to detatch it and avoid it gets stopped when closing the shell or the shell gets disconnected (SIGHUP), use the following _docker run_ commandline option:
+Note that the _docker run_ command will bind the container to the shell you are using. If you want to detach it so it won't be stopped when the shell is closed or gets disconnected (SIGHUP), use the following _docker run_ command-line option:
 
 -d or --detach: Run container in background and print container ID::
 The Docker container runs in the background of your terminal. It does not receive input or display output.
 
 === List Running Containers
 
-To {docker-ps-url}[list] all _running_ containers type:
+To {docker-ps-url}[list] all _running_ containers, type:
 
 [source,bash]
 ----
@@ -232,7 +237,7 @@ a0e4db3e91e8   owncloud/ocis   "/usr/bin/ocis server"   8 seconds ago   Up 6 sec
 
 === Stop a Running Container
 
-To {docker-stop-url}[stop] a runnig detached container, you first need the container ID which you will get with the above command. Then type the following command and replace <container-id> with the ID of the container you want to stop:
+To {docker-stop-url}[stop] a runnig detached container, you need the container ID which you will get with the above command. Then type the following command and replace <container-id> with the ID of the container you want to stop:
 
 [source,bash]
 ----
@@ -241,7 +246,7 @@ docker stop <container-id>
 
 === Restarting a Container
 
-{docker-restart-url}[Restarting a Docker container] does an equivalent of `docker stop` and `docker start`. Note the that the same parameters are used when the container has been started with the _run_ command. To restart a container, type the following and replace the <container-id> accordingly:
+{docker-restart-url}[Restarting a Docker container] does an equivalent of `docker stop` and `docker start`. Note that the same parameters are used as before when the container has been started with the _run_ command. To restart a container, type the following and replace the <container-id> accordingly:
 
 [source,bash]
 ----
@@ -250,7 +255,7 @@ docker restart <container-id>
 
 === Autostart oCIS Runtime on Boot
 
-To autostart oCIS when the server reboots, some steps need to be taken.
+To autostart oCIS when the server boots or reboots, some steps need to be performed.
 
 ==== Autostart the Docker Service
 
@@ -284,7 +289,7 @@ Then check if the service has started with:
 sudo systemctl status docker
 ----
 +
-Which will have an output like:
+This should display an output like:
 +
 [source,plaintext,options="nowrap"]
 ----
@@ -295,11 +300,11 @@ Which will have an output like:
 
 ==== Autostart the Container
 
-To start the container automatically when the Docker service has started or the container exits because of an error, add the `--restart=always` command line option to the _docker run_ command. You can replace `always` with other options suitable to your environment. If you want that the container no longer autostarts, you have to xref:stop-a-running-container[stop] him manually first.
+To start the container automatically after the Docker service has started or when the container exits because of an error, add the `--restart=always` command line option to the _docker run_ command. You can replace `always` with other options suitable for your environment. If you do not want the container to autostart any longer, you have to xref:stop-a-running-container[stop] it manually first.
 
 === Print Logs From Detached Container
 
-The {docker-logs-url}[docker logs] command shows information logged by a running container which is useful if you have detached it. To show the logs and follow log output, type the following and replace the <container-id> accordingly:
+The {docker-logs-url}[docker logs] command shows information logged by a running container, which is useful if you have detached it. To show the logs and follow log output, type the following and replace the <container-id> accordingly:
 
 [source,bash]
 ----
@@ -308,19 +313,19 @@ docker logs -f <container-id>
 
 == Enhanced Usage
 
-=== Multi Container Environment
+=== Multi-Container Environment
 
-Container run in isolation and don’t know anything about other processes or containers on the same machine. If containers are on the same network, they can talk to each other. See the {docker-multi-url}[Multi Container Apps] documentation to read more about this topic.
+Containers run in isolation and don’t know anything about other processes or containers on the same machine. If containers are on the same network, they can talk to each other. See the {docker-multi-url}[Multi Container Apps] documentation to read more about this topic.
 
-In a nutshell, you have to create a Docker network and reference this network in the all the containers that should be able to talk to each other.
+In a nutshell, you have to create a Docker network and reference this network in all the containers that should be able to talk to each other.
 
 === Docker Compose
 
-Similar when using _docker run_ and handover command line parameters for a single container, you define a `docker-compose.yml` yaml file which defines all of the environment for each container in one file. This is the next step of multi container environments. When the configuration is done, start the application stack with `docker-compose up -d`. For more details see {docker-compose-url}[Docker Compose].
+Similar to when using _docker run_ and handing over command-line parameters for a single container, you can define a `docker-compose.yml` yaml file which defines all the environment variables for each container in one file. This is the next step of multi-container environments. When the configuration is done, start the application stack with `docker-compose up -d`. For more details see {docker-compose-url}[Docker Compose].
 
 === Example Compose Files
 
-ownCloud provides some {compose-examples-url}[example docker compose] files as starting point and guidance to your own setup. Change the data according your needs. Check the oCIS version when using as template for productive environments.
+ownCloud provides some {compose-examples-url}[example docker compose] files as a starting point and guidance for your own setup. Change the data according your needs. Check the oCIS version when using a template for production environments.
 
 === Container Orchestration
 
@@ -331,10 +336,12 @@ Container orchestration tools are necessary to meet the requirements described i
 The pages +
 {swarm-v-kub-1-url}[Docker Swarm vs Kubernetes: how to choose a container orchestration tool] and +
 {swarm-v-kub-2-url}[Kubernetes Vs. Docker Swarm: A Comparison of Containerization Platforms] +
-can give a brief overview of their purpose, advantages and disadvantages of the both tools.
+can give a brief overview of their purpose, advantages and disadvantages of both tools.
+
+For Kubernetes, there are already {helm-charts-ocis-url}[Helm Charts] available that can be used and adjusted.
 
 == GUI for Docker
 
 * Docker on Linux does not have a dashboard by default, you have to use available tools like {portainer-url}[Portainer] or others which need manual installation.
 
-* {docker-desktop-url}[Docker Desktop] which is available for Windows and macOS includes the {docker-dashboard-url}[Docker Dashboard] without the need of additional installations.
+* {docker-desktop-url}[Docker Desktop], which is available for macOS, includes the {docker-dashboard-url}[Docker Dashboard] without the need for additional installations.
