--- a/modules/ROOT/pages/deployment/docker/docker-setup.adoc
+++ b/modules/ROOT/pages/deployment/docker/docker-setup.adoc
@@ -298,6 +298,12 @@ This should display an output like:
      ...
 ----
 
+==== Dependent Docker Service Startup
+
+If you want to ensure that you have e.g. a necessary NFS mount point guaranteed up and running _before_ the Docker service and the Container starts up, see xref:deployment/useful_mount_tip.adoc[Start a Service After a Resource is Mounted].
+
+NOTE: This step can be an important measure, because if the container starts up but the mount point needed is not available, you may be in an undefined oCIS operating state.
+
 ==== Autostart the Container
 
 To start the container automatically after the Docker service has started or when the container exits because of an error, add the `--restart=always` command line option to the _docker run_ command. You can replace `always` with other options suitable for your environment. If you do not want the container to autostart any longer, you have to xref:stop-a-running-container[stop] it manually first.
