--- a/modules/ROOT/pages/deployment/manual/manual-setup.adoc
+++ b/modules/ROOT/pages/deployment/manual/manual-setup.adoc
@@ -261,3 +261,9 @@ The logs of oCIS can be displayed by issuing:
 ----
 sudo journalctl -f -u ocis
 ----
+
+=== Dependent oCIS Service Startup
+
+If you want to ensure that you have e.g. a necessary NFS mount point guaranteed up and running _before_ the oCIS service starts up, see xref:deployment/useful_mount_tip.adoc[Start a Service After a Resource is Mounted].
+
+NOTE: This step can be an important measure, because if the oCIS service starts up but the mount point needed is not available, you may be in an undefined oCIS operating state.
