--- a/modules/ROOT/pages/deployment/docker/docker-setup.adoc
+++ b/modules/ROOT/pages/deployment/docker/docker-setup.adoc
@@ -9,6 +9,9 @@
 :docker-logs-url: https://docs.docker.com/engine/reference/commandline/logs/
 :docker-stop-url: https://docs.docker.com/engine/reference/commandline/stop/
 :docker-ps-url: https://docs.docker.com/engine/reference/commandline/ps/
+:docker-mount-url: https://docs.docker.com/storage/volumes/
+:docker-mount-nfs-url: https://docs.docker.com/storage/volumes/#create-a-service-which-creates-an-nfs-volume
+:docker-bindmount-url: https://docs.docker.com/storage/bind-mounts/
 :docker-restart-url: https://docs.docker.com/engine/reference/commandline/restart/
 :docker-multi-url: https://docs.docker.com/get-started/07_multi_container/
 :docker-compose-url: https://docs.docker.com/get-started/08_using_compose/
@@ -72,7 +75,7 @@ Alternatively, install Docker depending on your OS from the Docker site. See {in
 
 To give some terminology guidance, images are unchangeable snapshots of live containers, while containers are running (or stopped) instances of an image.
 
-* To download the latest oCIS image, run the following command:
+* To download the latest oCIS image, run the following command. Note that this command will download the correct image suitable for your OS if available:
 +
 [source,bash]
 ----
@@ -164,22 +167,22 @@ sudo docker run \
     owncloud/ocis
 ----
 
-You may also see xref:deployment/general/general-info.adoc#define-the-ocis-data-path[Define the oCIS Data Path] for another important basic environment variable.
+TIP: Be aware when starting the container, that the xref:deployment/general/general-info.adoc#define-the-ocis-data-path[oCIS datapath] is by default _inside_ the container at `/var/lib/ocis` and therefore not persistent. All your data will be lost when the container stops. If you want to make the content of the oCIS datapath persistent, you need to either mount a {docker-mount-url}[Docker volume] (`--mount`) or use a {docker-bindmount-url}[bind-mount] (`--volume, -v`). For details see the Docker command line options below.
 
-WARNING: While this is not used in production but for testing purposes only, you could run more than one oCIS container concurrently. In such a case, you have to define different ports and data paths for each of the containers you run to avoid any unexpected behaviour.
+WARNING: While this is not used in production and for testing purposes only, you could run more than one oCIS runtime container concurrently. In such a case, you have to define different ports and data paths for each of the runtime containers you run to avoid any unexpected behaviour.
 
 The following {docker-cli-url}[Docker command-line options] are quite helpful to know:
 
--e: Set environment variables::
+--env, -e: Set environment variables::
 Use this to pass only a few environment variables to the run command.
 
--i: Keep STDIN open even if not attached::
+--interactive, -i: Keep STDIN open even if not attached::
 This keeps STDIN open to the container.
 
--t: Allocate a pseudo-TTY::
+--tty, -t: Allocate a pseudo-TTY::
 Allocate a virtual terminal session within the container.
 
--p: Publish a container's port(s) to the host::
+--publish, -p: Publish a container's port(s) to the host::
 Defines the port mapping `<hostPort>:<containerPort>`. Use the port mapping if you want to access the dockerized oCIS web user interface.
 
 --rm: Automatically remove the container when it exits::
@@ -193,6 +196,16 @@ By default, containers created with _docker run_ are given a random name like `s
 
 --restart: Restart policy to apply when a container exits::
 See the details in the _docker run_ documentation for available options. Consider `always` as a good starting point.
+
+--mount: Attach a filesystem mount to the container::
+{docker-mount-url}[Docker volumes] are completely managed by Docker and have no server OS dependency. See the {docker-mount-nfs-url}[Create a service which creates an NFS volume] for an example. Note to mount the volume with `target=/var/lib/ocis` which uses in the example the default data path.
+
+--volume, -v: Bind mount a volume::
+{docker-bindmount-url}[Bind mounts] are dependent on the directory structure and OS of your server. Use this type to mount a local path from your OS. Example: `-v /some/host/dir:/var/lib/ocis` which uses in the example the default data path.
++
+NOTE: The filesystem at your OS mount point must be a xref:prerequisites/index.adoc#filesystems-and-shared-storage[supported filesystem] which supports extended attributes.
++
+WARNING: macOS can not use bind mounts as it does not support extended attributes. Use a Docker volume for persistent data instead.
 
 == Execute oCIS Commands
 
