--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,14 +1,14 @@
 * xref:index.adoc[Introduction]
 * ownCloud Infinite Scale 
-** xref:architecture/index.adoc[Architecture and Concepts]
-** xref:availability_scaling/index.adoc[Availability and Scalability]
-** xref:prerequisites/index.adoc[Prerequisites]
+** xref:architecture/architecture.adoc[Architecture and Concepts]
+** xref:availability_scaling/availability_scaling.adoc[Availability and Scalability]
+** xref:prerequisites/prerequisites.adoc[Prerequisites]
 ** xref:deployment/index.adoc[Deployment]
 *** xref:deployment/general/general-info.adoc[General Info]
-*** xref:deployment/manual/manual-setup.adoc[Manual Setup]
-*** xref:deployment/docker/docker-setup.adoc[Docker Setup]
+*** xref:deployment/binary/binary-setup.adoc[Binary Setup]
+*** xref:deployment/container/container-setup.adoc[Container Setup]
 *** xref:deployment/security.adoc[Securing oCIS]
-*** xref:deployment/nfs.adoc[Network File System Deployment]
+*** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 *** xref:extensions/index.adoc[Extensions]
 **** xref:extensions/audit.adoc[Audit Service Configuration]
 **** xref:extensions/webdav.adoc[WebDAV Service Configuration]
